...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
            android:src="@drawable/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="36dp"
            android:paddingRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/header_icon"
            tools:layout_editor_absoluteX="16dp">


            <EditText
                android:id="@+id/username"
                style="@style/RegistrationEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="Username"
                android:textColor="@color/WhiteSmoke"
                android:textColorHint="@color/WhiteSmoke" />

            <EditText
                android:id="@+id/password"
                style="@style/RegistrationEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
...
                android:layout_marginRight="16dp"
                android:enabled="false"
                android:text="Log in"
                android:background="@drawable/button_toggle" />

            <Button
                android:id="@+id/toggleRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
...
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingLeft="8dp"
            android:paddingTop="36dp"
            android:paddingRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/header_icon"
            tools:layout_editor_absoluteX="16dp">


            <EditText
                android:id="@+id/userRegister"
                style="@style/RegistrationEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:hint="@string/username"
                android:textColor="@color/WhiteSmoke"
                android:textColorHint="@color/WhiteSmoke" />

            <EditText
                android:id="@+id/passRegister"
                style="@style/RegistrationEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
...
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/WhiteSmoke"
                android:textColorHint="@color/WhiteSmoke" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
...
