<resources>
    <string name="app_name">SheanWoey_YiFan</string>
    <string name="welcome_text">Welcome to Pokemon World </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pokemon_detail">PokemonDetailActivity</string>
    <string name="sample">Sample Text 123</string>
    <string name="action_settings">Settings</string>
    <string name="title_info">Info</string>
    <string name="title_skills">Skills</string>
    <string name="title_sprite">Sprite</string>
    <string name="title_activity_poke_detail">PokeDetailActivity</string>i
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="pokeTeam_generate">Click to modify team</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_poke_team">PokeTeamActivity</string>
    <string name="need_to_register">Not yet Registered?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="basic_info">Basic Info</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="download_image">Download Image</string>

    <string name="view">View</string>
    <string name="delete">Delete</string>
</resources>
