<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_fitness_center_white_24dp"
        android:title="@string/title_skills" />


</menu>
